@@ -224,6 +224,12 @@ PPH_STRING PhSipFormatSizeWithPrecision(
 
 // CPU section
 
+typedef struct _SYSTEM_PROCESSOR_PERFORMANCE_HITCOUNT_WIN8
+{
+    ULONG Hits;
+    UCHAR PercentFrequency;
+} SYSTEM_PROCESSOR_PERFORMANCE_HITCOUNT_WIN8, *PSYSTEM_PROCESSOR_PERFORMANCE_HITCOUNT_WIN8;
+
 BOOLEAN PhSipCpuSectionCallback(
     __in PPH_SYSINFO_SECTION Section,
     __in PH_SYSINFO_SECTION_MESSAGE Message,
